[gd_scene load_steps=9 format=3 uid="uid://dywgawugnvi73"]

[ext_resource type="Script" path="res://scenes/ui/ui.gd" id="1_fjdpj"]
[ext_resource type="Texture2D" uid="uid://c64hjsy6r5icc" path="res://assets/art/ui/avatars/avatar-punk.png" id="1_qj8r0"]
[ext_resource type="Texture2D" uid="uid://801hyimf24yi" path="res://assets/art/ui/avatars/avatar-player.png" id="2_mj2yf"]
[ext_resource type="PackedScene" uid="uid://ddnarkqyswnj0" path="res://scenes/ui/healthbar.tscn" id="3_ehlm8"]
[ext_resource type="PackedScene" uid="uid://lm8q162jmhfv" path="res://scenes/ui/combo_indicator.tscn" id="5_7wpxc"]
[ext_resource type="PackedScene" uid="uid://brmmb8dl3feso" path="res://scenes/ui/score_indicator.tscn" id="6_okpxc"]
[ext_resource type="PackedScene" uid="uid://260lf671lsav" path="res://scenes/ui/flickering_texture_rect.tscn" id="6_us2i1"]
[ext_resource type="Texture2D" uid="uid://bwieiyefumh83" path="res://assets/art/ui/go-go-go.png" id="8_dp82m"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_fjdpj")
duration_healthbar_visible = 1000

[node name="UIContainer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="EnemyAvatar" type="TextureRect" parent="UIContainer"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -11.0
offset_bottom = 11.0
grow_horizontal = 0
texture = ExtResource("1_qj8r0")
stretch_mode = 2

[node name="PlayerAvatar" type="TextureRect" parent="UIContainer"]
layout_mode = 1
offset_right = 11.0
offset_bottom = 11.0
texture = ExtResource("2_mj2yf")
stretch_mode = 2

[node name="PlayerHealthbar" parent="UIContainer" instance=ExtResource("3_ehlm8")]
offset_left = 12.0
offset_top = 7.0
offset_right = 42.0
offset_bottom = 11.0

[node name="EnemyHealthbar" parent="UIContainer" instance=ExtResource("3_ehlm8")]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -42.0
offset_top = 7.0
offset_right = -12.0
offset_bottom = 11.0
grow_horizontal = 0
is_inverted = true

[node name="WhiteBorder" parent="UIContainer/EnemyHealthbar" index="0"]
layout_direction = 3
scale = Vector2(-30, 1)

[node name="ContentBackground" parent="UIContainer/EnemyHealthbar" index="1"]
layout_direction = 3
scale = Vector2(-28, 1)

[node name="HealthGauge" parent="UIContainer/EnemyHealthbar" index="2"]
layout_direction = 3
scale = Vector2(-15, 1)

[node name="ComboIndicator" parent="UIContainer" instance=ExtResource("5_7wpxc")]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = -6.0
offset_right = 20.0
offset_bottom = 0.0
grow_vertical = 0

[node name="ScoreIndicator" parent="UIContainer" instance=ExtResource("6_okpxc")]
offset_left = 12.0
offset_top = 1.0
offset_right = 38.0
offset_bottom = 7.0

[node name="GoIndicator" parent="UIContainer" instance=ExtResource("6_us2i1")]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -16.0
offset_top = 11.0
offset_right = 0.0
offset_bottom = 27.0
grow_horizontal = 0
texture = ExtResource("8_dp82m")
stretch_mode = 2
duration_flicker = 200
total_flickers = 3

[editable path="UIContainer/EnemyHealthbar"]
